<resources>
    <string name="app_name">LisaPayPerUse</string>

    <!-- Strings related to login -->
    <string name="ip">192.168.137.1</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Password (confirm)</string>
    <string name="action_log_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_nif">NIF (Optional)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_return">Return</string>
    <string name="title_activity_lisa_shop">LisaShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_pwd_nomatch">Palavras chave não coincidem</string>
    <string name="error_invalid_nif">NIF com comprimento inválido</string>
    <string name="action_skip">Saltar</string>
    <string name="action_add_cc">Adicionar Cartão</string>
    <string name="prompt_numero_cc">Número Cartao de Crédito</string>
    <string name="prompt_validade">Validade (ex. 01-01-2100)</string>
    <string name="prompt_cvc">CVC</string>
</resources>
